--- a/main.tex
+++ b/main.tex
@@ -41,14 +41,14 @@
 }\par
 \renewcommand{\baselinestretch}{1.0}
 \bigskip
-F. M. Sanchez$^1\!$, \ V. Kotov$^2\!$, \ M. Grosmann$^3$, \ D. Weigel$^4$, \ R. Veysseyre$^5$, \ C. Bizouard$^6$, \ N. Flawisky$^7$, \ D. Gayral$^8$, \ L. Gueroult$^9$\\
+F. M. Sanchez$^1\!$, \ V. A. Kotov$^2\!$, \ M. Grosmann$^3$, \ D. Weigel$^4$, \ R. Veysseyre$^5$, \ C. Bizouard$^6$, \ N. Flawisky$^7$, \ D. Gayral$^8$, \ L. Gueroult$^9$\\
 
 {\footnotesize  $^1$Retired Pr. Universite Paris 9, Orsay, France.\rule{0pt}{12pt}
 E-mail: hol137-at-yahoo-dot-com\\
 $^2$Astronomer Crimean Astrophysical Observatory CrAO, Nauchny, Crimea, Russian Federation.
 $^3$Retired Pr. at Universite Louis Pasteur Strasbourg, France.
-$^4$Retired Pr. at Universite Dijon, France.
-$^5$Retired Pr. at Ecole centrale, Paris, France.
+$^4$Retired Pr. at Universite of Dijon and Paris 6, France.
+$^5$Retired Pr. at Ecole Centrale, Paris, France.
 $^6$Astronomer at OBSPM, Paris, France.
 $^7$Architect / Math Instructor at Ecole Nationale Superieure d'Architecture Paris Malaquais, France.
 $^8$Computer Science Engineer at OBSPM, Paris, France.
@@ -80,7 +80,7 @@ This new scanning space-time structure is confirmed by a single-electron cosmolo
 \setcounter{page}{1}
 
 
-\markboth{F. Sanchez, \ V. Kotov, \ M. Grosmann, \ D. Weigel, \ R. Veysseyre, \ C. Bizouard, \ N. Flawisky, \ D. Gayral, \ L. Gueroult, Back to Cosmos}{\thepage}
+\markboth{F.M. Sanchez, \ V. A. Kotov, \ M. Grosmann, \ D. Weigel, \ R. Veysseyre, \ C. Bizouard, \ N. Flawisky, \ D. Gayral, \ L. Gueroult, Back to Cosmos}{\thepage}
 
 \section{Deterministic Computation and Hierarchy Principle}
 It was observed that the physical constants are tightly contrived, but only three dimensionless parameters: $a$, $p$, and $a_{G}$, are sufficient to explain the main structures of the world [1]. Two of them are precisely measured: the electric constant $a$ $\approx$ 137.035999139(31) known with 0.23 ppb precision and the proton-electron mass ratio $p$ $\approx$ 1836.15267245(75), known with 0.41 ppb precision. By contrast, the gravitational coupling constant $a_{G}$ was neither well defined nor measured, due to the relatively large imprecision on $G$ measurement 10$^{-4}\!$.
@@ -109,7 +109,7 @@ The first section explains, by the Holographic Principle, \textit{why large numb
 \section {Internal Fine Tuning and Canonical Large Numbers}
 We look here for a systematic organization of dimensionless physical quantities stemming from cosmology, particle physics and mathematics.
 \subsection {The Cosmic Fine-Tuning and the Topological Axis}
-\markright{F. Sanchez, \ V. Kotov, \ M. Grosmann, \ D. Weigel, \ R. Veysseyre, \ C. Bizouard, \ N. Flawisky, \ D. Gayral, \ L. Gueroult, Back to Cosmos}
+\markright{F. M. Sanchez, \ V. A. Kotov, \ M. Grosmann, \ D. Weigel, \ R. Veysseyre, \ C. Bizouard, \ N. Flawisky, \ D. Gayral, \ L. Gueroult, Back to Cosmos}
 
 The most famous fine tuning implies cosmic quantities, awkwardly called the `Double
 Large Number Problem`. If it is a `problem` for standard evolutionary cosmology, it is a precious
@@ -188,7 +188,7 @@ periodicity 8 [25] which is at the origin of the name `topological axis`.
 \label{fig:figure_label}
 \end{figure*}
 
-It was noted in [1] that $a_{G}$ is of order $W^{8}$, where $W$ is the mass ratio W boson-
+It was observed in [1] that $a_{G}$ is of order $W^{8}$, where $W$ is the mass ratio W boson-
 Electron. With the above $R$ value, one observes the following more symmetrical relation involving
 the other (neutral) weak boson Z, in the 0.01\% indetermination of $W$ and $Z$:
 \begin{equation}
@@ -956,8 +956,6 @@ term $1+1/\sqrt{a}$, central in quantum electrodynamics to 0.1 ppm:
 1+1/\sqrt{a} \approx \tau^{3} H/pD^{2}
 \end{equation}
 This Koide relation, quite discarded by the scientific community, is another sign of the serious incompleteness of present Particle Physics standard model
-
-
 
 \subsection {The Intermediate Bosons mathematical fine tuning}
 
