--- a/main.tex
+++ b/main.tex
@@ -41,32 +41,20 @@
 }\par
 \renewcommand{\baselinestretch}{1.0}
 \bigskip
-F. M. Sanchez$^1\!$, \ V. A. Kotov$^2\!$, \ M. Grosmann$^3$, \ D. Weigel$^4$, \ R. Veysseyre$^5$, \ C. Bizouard$^6$, \ N. Flawisky$^7$, \ D. Gayral$^8$, \ L. Gueroult$^9$\\
-
-{\footnotesize  $^1$Retired Pr. Universite Paris 9, Orsay, France.\rule{0pt}{12pt}
-E-mail: hol137-at-yahoo-dot-com\\
-$^2$Astronomer Crimean Astrophysical Observatory CrAO, Nauchny, Crimea, Russian Federation.
-$^3$Retired Pr. at Universite Louis Pasteur Strasbourg, France.
-$^4$Retired Pr. at Universite of Dijon and Paris 6, France.
-$^5$Retired Pr. at Ecole Centrale, Paris, France.
-$^6$Astronomer at OBSPM, Paris, France.
-$^7$Architect / Math Instructor at Ecole Nationale Superieure d'Architecture Paris Malaquais, France.
-$^8$Computer Science Engineer at OBSPM, Paris, France.
-$^9$Retired Maitre de Conference at Ecole Nationale Superieure d'Architecture Paris Malaquais, France.
-
-}\par
+F. M. Sanchez, \ V. Kotov, \ M. Grosmann, \ D. Weigel, \ R. Veysseyre, \ C. Bizouard, \ N. Flawisky, \ D. Gayral, \ L. Gueroult\\
+\par
 \medskip
 {\small\parbox{11cm}{%
 \hfill To the memory of Sir Michael Atiyah\\
 The ancestral concept of Cosmos is rediscovered through the idea of a Tachyonic Grandcosmos Multibasis Computer, inversing the Anthropic Principle and reestablishing the Laplace Determinism.
-The observed fine tuning between Physical dimensionless parameters is interpreted as relations between optimal calculation basis, announcing a possible progress in scientific computing.
+The observed fine-tuning of Nature between Physical dimensionless parameters is interpreted as relations between optimal calculation basis, announcing a progress in scientific computing.
 Three types of mathematical constants are considered: large, intermediate and close to unity. The famous Large Number problem is resolved by Eddington's statistical theory and the gravitational Hydrogen Molecule model, leading to the visible Universe horizon radius $R$ $\approx$ 13.812 Gly.
 The extension of the double cosmic correlation defines a Topological Axis using Euler-Napier constant $e$ as primary basis, confirming String Theory, Cartan-Bott periodicity and the 30 holic dimensions corresponding to the simplest physical diophantine equation T$^2\!$ = L$^3\!$ = M$^5\!$ = N$^{30}\!$.
 This dimension n = 30 corresponds to the common time, about 10$^{58}\!$ s, given by two mandatory dimensional analysis, interpreted as the Supercycle period.
 The visible Universe wavelength `Topon`: 2$G$$\hbar$/$R$c$^3\!$ $\approx$ 4 $\times$ 10$^{-96}\!$ m, corresponds to $n \approx$ 2e$^e\!$ and enters the 1D mono-radial holographic extension of the Bekenstein-Hawking Universe entropy, implying the critical condition, and breaking Planck's wall by a factor 10$^{61}\!$.
 The monochromatic holographic extension leads to a Grandcosmos, larger than the visible Universe by the same factor 10$^{61}\!$.
 This implies a tachyonic speed in the same ratio by respect to $c$, justifying the Planck renormalisation of the Vacuum Energy, independently checked by the Casimir effect.
-The couple Universe-Grandcosmos is confirmed by a dramatic geo-dimensional analysis, where logarithms of Length, Time and Mass ratios are considered as vectors in a 3D Super-space. A matter-antimatter 10$^{104}\!$ Hz Oscillatory Bounce unifies standard Single Bang with steady-state cosmology, but suppress Relativity in cosmology at large, reestablishing the Newton Absolute Space-Time realized by the Microwave Cosmic Radiation, while Kotov cycle defines a quasi-absolute clock.
+The couple Universe-Grandcosmos is confirmed by a dramatic geo-dimensional analysis, where logarithms of Length, Time and Mass ratios are considered as vectors in a 3D Super-space. A matter-antimatter 10$^{104}\!$ Hz Oscillatory Bounce unifies standard Single Bang with steady-state cosmology, but suppress Relativity in cosmology at large, reestablishing the Newton Absolute Space-Time realized by the Microwave Cosmic Radiation, while Kotov cycle defines an absolute clock.
 This new scanning space-time structure is confirmed by a single-electron cosmology, connected with Kotov period, relying on Sternheimer's Scale Factor $j$ and Atiyah's constant $\Gamma$, which appear as privileged computational basis, as well as e, $\pi$ and $a$ $\approx$ 137.036, in liaison with the sporadic groups. While $j$ shows overwhelming biological pertinence, $\Gamma$ and Eddington's constant 137 enter dramatic ppb ($10^{-9}$) precision relations with particle data. This predics unificaton of mathematics, informatics, physics, chemistry and biology. The future telescopes will find mature galaxies in the very far range, instead of a Dark Space, ruining definitely the standard evolutionary cosmology, ill-founded on an imperfect Cosmological Principle.
 %% TODO: Insérer axe topologique
 }}\smallskip
@@ -80,46 +68,46 @@ This new scanning space-time structure is confirmed by a single-electron cosmolo
 \setcounter{page}{1}
 
 
-\markboth{F.M. Sanchez, \ V. A. Kotov, \ M. Grosmann, \ D. Weigel, \ R. Veysseyre, \ C. Bizouard, \ N. Flawisky, \ D. Gayral, \ L. Gueroult, Back to Cosmos}{\thepage}
+\markboth{F. Sanchez, \ V. Kotov, \ M. Grosmann, \ D. Weigel, \ R. Veysseyre, \ C. Bizouard, \ N. Flawisky, \ D. Gayral, \ L. Gueroult, Back to Cosmos}{\thepage}
 
 \section{Deterministic Computation and Hierarchy Principle}
-It was observed that the physical constants are tightly contrived, but only three dimensionless parameters: $a$, $p$, and $a_{G}$, are sufficient to explain the main structures of the world [1]. Two of them are precisely measured: the electric constant $a$ $\approx$ 137.035999139(31) known with 0.23 ppb precision and the proton-electron mass ratio $p$ $\approx$ 1836.15267245(75), known with 0.41 ppb precision. By contrast, the gravitational coupling constant $a_{G}$ was neither well defined nor measured, due to the relatively large imprecision on $G$ measurement 10$^{-4}\!$.
+It was observed that the physical constants are tightly contrived, but only three dimensionless parameters: $a$, $p$, and $a_{G}$ are sufficient to explain the main structures of the world [1]. Two of them are precisely measured: the electric constant $a$ $\approx$ 137.035999139(31) known with 0.23 ppb precision and the proton-electron mass ratio $p$ $\approx$ 1836.15267245(75), known with 0.41 ppb precision. By contrast, the gravitational coupling constant $a_{G}$ was neither well defined nor measured, due to the relatively large imprecision on $G$ measurement 10$^{-4}\!$.
 
-One can read [1]: \textit{“For example, the size of a planet is the geometric mean of the size of the Universe and the size of an atom; the mass of man is the geometric mean of the mass of a planet and the mass of a proton. Such relationships, as well as the basic dependences on $a$ and $a_G$ from which they derive, might be regarded as coincidences if one does not appreciate that they can be deduced from known physical theory, with the exception of the Universe, which cannot be explained directly from kwown physics.... This line of arguments, which is discussed later, appeals to the 'anthropic principle'.”}
+One can read [1]: \textit{“For example, the size of a planet is the geometric mean of the size of the Universe and the size of an atom; the mass of man is the geometric mean of the mass of a planet and the mass of a proton. Such relationships, as well as the basic dependences on $a$ and $a_G$ from which they derive, might be regarded as coincidences if one does not appreciate that they can be deduced from known physical theory, with the exception of the Universe, which cannot be explained directly from kwown physics... This line of arguments, which is discussed later, appeals to the 'anthropic principle'.”}
 
-The existence of relations that are not explained by known physical theories, is called 'fine tuning' phenomena. But as soon as it involves the observable Universe radius, it signals the existence of a more fundamental theory that must take into account the \textit{ancestral Cosmos concept, which, as Eddington claimed [2], must be permanent [3]}. Extending this to the spatial homogeneity, this leads to the Perfect Cosmological Principle, the very foundation of the steady-state cosmology.
+The existence of relations that are not explained by known physical theories, is called 'natural fine tuning' phenomena. But, as soon as it involves the observable Universe radius, it signals the existence of a more fundamental theory that must take into account the \textit{ancestral Cosmos concept, which, as Eddington claimed [2], must be permanent}. Extending this to the spatial homogeneity, this leads to the Perfect Cosmological Principle, the very foundation of the steady-state cosmology [3].
 
- So Eddington considered rightly the Cosmic Large Number correlations, as recalled in this article. This forgetting of Eddington's pioneer work was enforced by the fact that about 30 dimensionless parameters appear as  'free parameters' in the Particle standard model. They are misnamed, since, far from being really 'free', they are imposed by Nature. But, a large majority of theorists believe they are due to chance, leading to a separation between Physics and Mathematics, not to speak of Biology. Through a so-called Anthropic Principle, a majority believe in the Multiverse conundrum, a multiplicity of sterile Universe [1].
+So Eddington considered rightly the Cosmic Large Number correlations, as recalled in this article. But the forgetting of Eddington's pioneer work was enforced by the fact that about 30 dimensionless parameters appear as  'free parameters' in the Particle standard model. They are misnamed, since, far from being really 'free', they are imposed by Nature. Nevertheless, a large majority of theorists believe they are due to chance, leading to a separation between Physics and Mathematics, not to speak of Biology. Through a so-called Anthropic Principle, a majority believe in the Multiverse conundrum, a multiplicity of sterile Universe [1].
 
-The present article shows that \textit{Physics is a part of mathematics}, refuting the Multiverse Hypothesis by precise fine-tuning between main physical and biological parameters, involving main mathematical constants in particle physics: $\pi$,  $e$ and $\gamma$, the Euler-Mascheroni constant. Also, these relations confirm the super-string theory and rehabilitates the tachyonic bosonic String Theory.
+The present article shows that \textit{Physics is a special part of mathematics}, refuting the Multiverse Hypothesis by precise fine-tuning between main physical and biological parameters, involving main mathematical constants in particle physics: $\pi$,  $e$ and $\gamma$, the Euler-Mascheroni constant. Also, these relations confirm the super-string theory and rehabilitates the tachyonic bosonic String Theory.
 
-\textit{A decisive point of physics is the energy conservation.} Theorists associate it with time uniformity, but a more logical explication is that cosmos is a computer, so Intelligent Life receive a justification: to help the Cosmos computation. This Inverted Anthropic Principle answers the first of all questions : why does one asks questions ? We propose that the parameters are optimal basis in a deterministic Computing Cosmos, and they appear indeed in DNA characteristics, and three-point temperatures of mammals and main molecules [3 and references therein].
+\textit{A decisive point of physics is the energy conservation, or the Firt Principle of Thermodynamics.} Theorists associate it with time uniformity, but a more logical explication is that cosmos is a computer, so Intelligent Life receives a justification: to help the Cosmos computation. This Inverted Anthropic Principle answers the first of all questions : why does one asks questions ? We propose that the parameters are optimal basis in a Deterministic Computing Cosmos, and they appear indeed in DNA characteristics, and three-point temperatures of mammals and main molecules [3 and references therein].
 
 \textit{This reinstates the Laplace determinism}, involving non-local hidden variables, which are identified with the Cosmos, so rejecting the Copenhagen statistical interpretation of quantum mechanics.
 
 The fact that three parameters, among of about 30, are so clearly emerging means that physics, and more generally science, is hierarchic: \textit{one can progress in science without knowing the details of the underlying fundamental theory.}
 
-So, when Proust found whole numbers in chemical reactions, he was prefiguring the atoms of Dalton. The same for Balmer, spectral lines and wave mechanics. Idem for Mandeleiev, atomic masses and nuclear physics. Also, when Mandel found whole numbers in Biology, he was prefiguring genetics. In the same manner, this article prefigures \textit{the fundamental theory which must be based on arithmetics,} being in fact a characteristic of deterministic computation, which could proceed by optimal algorithms, so enlighting the above Hierarchy Principle.
+So, when Proust and Dalton found whole numbers in chemical reactions, he was prefiguring atomic physics. The same for Balmer, spectral lines and wave mechanics. Idem for Mandeleiev, atomic masses and nuclear physics. Also, when Mandel found whole numbers in Biology, he was prefiguring genetics. In the same manner, this article prefigures \textit{the fundamental theory which must be based on arithmetics,} being in fact a characteristic of deterministic computation, which could proceed by optimal algorithms, so enlighting the above Hierarchy Principle.
 
 \subsection{Plan}
 This article is separated in 3 sections, corresponding to 3 classes of mathematical constants, the large, the intermediate and the small, close to unity. The optimal computation basis $e$ is used all along, in particular as the primary basis of the Topological Axis Function f\{n\} = exp(2$^{n/4}$), the secondary basis being 2, the simplest of all (Fig. 1).
 
-The first section explains, by the Holographic Principle, \textit{why large numbers are necessary}, so justifying at last the Cosmos vastness. In particular, we consider the famous prime number 2$^{127}\!$-1, the Eddington's Large number 136 $\times$ 2$^{256}\!$ and the cardinal order of the Monster group. The second section will study intermediate mathematical constants, of Eddington (137), Green-Schwarz (496), Atiyah ($\Gamma$), Sternheimer ($j$), Bizouard ($f$) and Matthieu (7920). The third Section involves the constants $\pi$, $e$ and $\gamma$. 
+The first section explains, by the Holographic Principle, \textit{why large numbers are necessary}, so justifying at last the Cosmos vastness. In particular, we consider the famous prime number 2$^{127}\!$-1, the Eddington's Large number 136 $\times$ 2$^{256}\!$ and the cardinal order of the Monster group. The second section will study intermediate mathematical constants, of Eddington (137), Green-Schwarz (496), Atiyah ($\Gamma$), Sternheimer ($j$), Bizouard ($f$) and Matthieu (7920). The third Section involves mainly the constants $\pi$, $e$ and $\gamma$. 
 
 \section {Internal Fine Tuning and Canonical Large Numbers}
 We look here for a systematic organization of dimensionless physical quantities stemming from cosmology, particle physics and mathematics.
 \subsection {The Cosmic Fine-Tuning and the Topological Axis}
-\markright{F. M. Sanchez, \ V. A. Kotov, \ M. Grosmann, \ D. Weigel, \ R. Veysseyre, \ C. Bizouard, \ N. Flawisky, \ D. Gayral, \ L. Gueroult, Back to Cosmos}
+\markright{F. Sanchez, \ V. Kotov, \ M. Grosmann, \ D. Weigel, \ R. Veysseyre, \ C. Bizouard, \ N. Flawisky, \ D. Gayral, \ L. Gueroult, Back to Cosmos}
 
 The most famous fine tuning implies cosmic quantities, awkwardly called the `Double
 Large Number Problem`. If it is a `problem` for standard evolutionary cosmology, it is a precious
 clue in steady-state cosmology based on the above \textit{Perfect} Cosmological Principle (spatial \textit{and} temporal homogeneity) [3].
 This Cosmic Fine-Tuning leads directly to a Gravitational Hydrogen model of the universe [3]
-defining the Universe horizon radius $$R = 2a_{G} \lambdabar_{e}$$ the factor 2 coming from the two atoms in
+defining the Universe horizon radius: $$R = 2a_{G} \lambdabar_{e}$$ the factor 2 coming from the two atoms in
 Hydrogen molecule, where 
 $\lambdabar_{e} = \hbar/cm_{e}$
 is the Electron Compton reduced wavelength, and the
-gravitational coupling constant 
+gravitational coupling constant is: 
 $$a_{G} = \hbar c/Gm_{p}m_{H}$$
 So, \textit{the speed c is eliminated}, in accordance with
 Coherent Cosmology which needs signal celerity far exceeding $c$. This gives $$R \approx 13,812 Gly $$ corresponding to a Hubble constant 70.790 (km/s)/Megaparsec, compatible with the
@@ -135,10 +123,8 @@ $
 $
 followed by 
 $
-l_{macro} /\lambdabar_{e} \sim (\lambdabar_{e} /l\prime_{micro} )^{2}
-$
-
-leading to:
+l_{macro} /\lambdabar_{e} \sim (\lambdabar_{e} /l^{\prime}_{micro} )^{2}
+$ leading to:
 $$
 \begin{array}{ll}
 %
@@ -188,7 +174,7 @@ periodicity 8 [25] which is at the origin of the name `topological axis`.
 \label{fig:figure_label}
 \end{figure*}
 
-It was observed in [1] that $a_{G}$ is of order $W^{8}$, where $W$ is the mass ratio W boson-
+It was noted in [1] that $a_{G}$ is of order $W^{8}$, where $W$ is the mass ratio W boson-
 Electron. With the above $R$ value, one observes the following more symmetrical relation involving
 the other (neutral) weak boson Z, in the 0.01\% indetermination of $W$ and $Z$:
 \begin{equation}
@@ -198,7 +184,7 @@ where $\lambdabar_{p}$ and $\lambdabar_{H}$ are the Proton and Hydrogen reduced 
 
 The gravitational Hydrogen molecule model [3] implies the following double correlation,
 which is the simplest case of Eddington's statistical theory [2]. The position of a `reference particle`
-is supposed to be determined with an uncertainty of ${R/2}$. For N particles of mass $m$ components of the visible Universe, the deviance is statistically divided by $\sqrt{N}$, where $N = M/m$. If $m$ is the effective mass of the electron in the Hydrogen atom, $m\prime_{e} = m_{e} p/H$, and if, moreover, we equate
+is supposed to be determined with an uncertainty of ${R/2}$. For N particles of mass $m$ components of the visible Universe, the deviance is statistically divided by $\sqrt{N}$, where $N = M/m$. If $m$ is the effective mass of the electron in the Hydrogen atom, $m^{\prime}_{e} = m_{e} p/H$, and if, moreover, we equate
 the deviance $R/(2\sqrt{(M/m^{\prime}_{e}))}$ to the Hydrogen wavelength $\lambdabar_{H} = \hbar/c m_{H}$, one obtains the double relation:
 \begin{equation}
 R/2\lambdabar_{H} = (M/m^{\prime}_{e})^{1/2} = \hbar c/G m_{e} m_{p}
@@ -210,8 +196,8 @@ Physics, the third pillar, Statistical Physics, directly makes this connection i
 Recall that, contrary to what is often stated, Quantum Physics does not limit to Micro-physics.
 Indeed the exclusion principle applies in both solid state physics and in stellar physics. In particular,
 for a star containing $N_s$ atoms, in which the pressure has reached the quantum degenerancy value
-(case of white dwarfs), exclusion principle applies for electrons, and the radius star is about $R/N_{s}^{1/3}$ .
-So the formula giving the Hubble radius R, a very difficult measurement which puzzled a whole
+(case of white dwarfs), exclusion principle applies for electrons, and the radius star is about $R/N_{s}^{1/3}$.
+So the formula giving the Hubble radius $R$, a very difficult measurement which puzzled a whole
 century, was already contained in astrophysics textbooks. The universe radius amazingly appears as
 the limit of a mono-atomic star radius, for which the electrons are in degeneracy state. Eddingon was
 aware of this Cosmologic Exclusion Principle, but could not conclude since, at his epoch, the
@@ -236,7 +222,7 @@ another evacuation mechanism must occur: \textit{it would be the role of massive
 In the steady-state cosmologic model of Bondi, Gold and Hoyle [3], the Perfect Cosmological
 Principle implies the invariance of the Universe mean mass density $\rho$ and the exponential recession
 of galaxy groups, with time constant $R/c$ being compensated by the appearance of $m_n$ massive
-neutrons at rate $c^{3} /Gm_{n}$. The invariant visible Universe radius $R$ is then defined by the
+neutrons at rate $c^{3} /Gm_{n}$, corresponding to about one neutron by century in a cathedral volume. The invariant visible Universe radius $R$ is then defined by the
 Schwarszchild relation, so that each point is the center of an equivalent $R$-radius black hole, of
 critical mass $M = Rc^{2} /2G$ and wavelength $\lambdabar_M = \hbar/Mc = 2l_{P}^{2} /R$, the above `topon`. The Bekenstein-Hawking entropy of this black-hole Universe shows an 1D extension of the standard Holographic
 Principle, untill now devoted to 3D application only [6]:
@@ -262,14 +248,14 @@ monochrome instead of the monoradial relation above:
 \begin{equation}
 S_{BH}\, = \pi(R/l_P )^{2} = 2\pi R^{(0)}_{GC} /l_{P}
 \end{equation}
-with $R^{(0)}_{GC} /R = l_{P} /\lambdabar_{M} \sim 10^{61}$ . The conservation of the time constant $t = R/c = R^{(0)}_{GC} /C$ introduces a canonical velocity $C \sim 10^{61} c$, lifting the veil on an energy larger than that of the visible Universe by a factor of $10^{122}$ , which can be identified with the $l_{P}$ - normalised quantum energy of vacuum, checked by
-the Casimir effect [7]. The central problem of quanto-cosmic physics is thus solved. Moreover, the
+with $R^{(0)}_{GC} /R = l_{P} /\lambdabar_{M} \sim 10^{61}$. The conservation of the time constant $t = R/c = R^{(0)}_{GC} /C$ introduces a canonical velocity $C \sim 10^{61} c$, lifting the veil on an energy larger than that of the visible Universe by a factor of $10^{122}$, which can be identified with the $l_{P}$ - normalised quantum energy of vacuum, checked by
+the Casimir effect [7]. The central problem of quantum cosmic physics is thus solved. Moreover, the
 objections against the Hawking approach using trans-Plankian frequencies are wiped out [8].
 
 In a better approximation, justified below, $R$ is replaced in the above relation by $R^{\prime} = 2\hbar^{2}/Gm_{N}^{3}
-\approx 18.105 Gly $, where $m_{N} = am_{e}$ is the Nambu mass, of central importance in particle
+\approx 18.105$ Gly, where $m_{N} = am_{e}$ is the Nambu mass, of central importance in particle
 physics. Indeed, the half radius $R^{\prime}/2$ has a simpler definition than $R/2$: it corresponds to the
-elimination of $c$ between the classical electron radius and the Planck length. In this way, the sphere
+elimination of $c$ between the classical electron radius and the Planck length [3]. In this way, the sphere
 of radius $R^{\prime}$ appears as the spherical hologram representation of the outer Grandcosmos:
 \begin{equation}
 S^{\prime}_{BH}\, = \pi(R^{\prime}/l_{P})^{2} = 2\pi R_{GC} /l_{P}
@@ -277,18 +263,18 @@ S^{\prime}_{BH}\, = \pi(R^{\prime}/l_{P})^{2} = 2\pi R_{GC} /l_{P}
 This value will be dramaticaly confirmed in the section 2.4. (Fig.6).
 
 Assuming the Toponic Quantification Hypothesis, the mass of a particle is an exact sub-multiple
-of the mass-equivalent $M$ of the visible Universe: $m = M/N_{m}$, and its canonical wavelength is $N_m \lambdabar_{M}$ ,
+of the mass-equivalent $M$ of the visible Universe: $m = M/N_{m}$, and its canonical wavelength is $N_m \lambdabar_{M}$,
 allowing the following holographic extension of the above mono-radial holographic conservation:
 \begin{equation}
 S_{BH} = \pi(R/l_{P})^{2} = 2\pi R/\lambdabar_{M} = 2\pi N_{m} R/\lambdabar_{m}
 \end{equation}
 This series of diametral circles generate, by scanning, the approximation of a sphere: one thus passes
 from disk to sphere. Note that this justifies the factor $\frac{1}{4}$ in above BH entropy. But, for
-the approximation to be sufficient, the numbers $N_{m}$ must be very large. In this way, the Cosmos-
+the approximation to be sufficient, \textit{the numbers $N_{m}$ must be very large}. In this way, the Cosmos-
 Computer can use the computational properties of the mathematical constants of the continuous
-analysis, such as $\pi$ (See Section 4 and Discussion).
+analysis, such as $e$ and $\pi$ (See Section 4 and Discussion).
 
-The immensity of the Cosmos thus receives a computo-holographic explanation, which is much simpler
+The immensity of the Cosmos thus receives a computational holographic explanation, which is much simpler
 than that of standard cosmology, where initial conditions, during Planck's time, would be adjusted with
 extreme precision, even with inflation. 
 
@@ -296,23 +282,18 @@ With $N_{Ed} = 136 \cdot2^{256}$ the Eddington's large number, one observes that
 \begin{equation}
 Mm_p = m_P^4/m_em_H\approx(10N_{Ed}/3)m_Hm_n 
 \end{equation}
-showing a kind of symmetry between the masses.
-
-By identifying the large number of Eddington $N_{Ed} = 136 \cdot
-2^{256}$ as the equivalent number of neutrons in the effective mass $\frac{3M}{10}$ this leads to $R \approx 13,805 
-Gly$ at $0.05\%$ of the above value.
+showing a kind of symmetry between the Particle masses.
 
 In the gravitational hydrogen molecule model, $R$ is defined by the following 1D-2D Special
-Holographic Relation, using the wavelengths of the electron, proton and hydrogen, while the background wavelength appear in the 3D term involving the molecular Hydrogen wavelength:
+Holographic Relation, using the wavelengths of the electron, proton and hydrogen, while the background wavelength appears in the 3D term involving the molecular Hydrogen wavelength:
 \begin{equation}
 2 \pi R/\lambdabar_{e} = 4 \pi \lambdabar_{p} \lambdabar_{H} /l_{P}^2 \simeq (4\pi/3)(\lambdabar_{CMB} /\lambdabar_{H2})^{3}
 \end{equation}
-
 The above relation gives $T_{CMB} \simeq 2.73 K$. With the measured temperature of the cosmic
 background, there is a small gap compatible with $(H/p_G)^2 p/6\pi^5 $, where $p_{G}^{2} = P^{2} /2^{127}$ , with $P = \lambdabar_{e} /l_{P}$. 
-This eliminates $l_{P}$, producing a relation independent of $G$, implying $\Theta_{CMB} = 2.725820805 K$:
+This eliminates $l_{P}$, producing a relation independent of $G$, implying $\Theta_{CMB} \approx 2.725820805$ Kelvin:
 $$2^{127} = 2\pi^{2} \lambda_{CMB}^{3} /\lambdabar_{e} \lambdabar_{H}^2$$
-, which is the area of the 4-sphere of radius $\lambda_{CMB} / \lambdabar_{m}$, where $\lambdabar_{m} = (\lambdabar_{e} \lambdabar_{H} 2 )^{1/3} $ proving the relevance of
+which is the area of the 4-sphere of radius $\lambda_{CMB} / \lambdabar_{m}$, where $\lambdabar_{m} = (\lambdabar_{e} \lambdabar_{H}^2)^{1/3} $ proving the relevance of
 the Lenz-Wyler approximation for the Proton/Electron mass ratio $p = 6\pi^{5}$, (see Section 4). Recall
 that $2^{127} - 1$ is the most famous prime number in the history of Mathematics, being the last term of
 the Combinatorial Hierarchy [3] of special imbricated Mersenne numbers 3, 7, 127, the sum of which is 137.
@@ -321,7 +302,7 @@ Coming back to the central mass relation:
 \begin{equation}
 m_{P}^{4}\, = M m_{e} m_{p} m_{H}
 \end{equation}
-this directly involves Planck's mass $m_{P}$ , which at the present time, has no known application, except
+this directly involves Planck's mass $m_{P}$, which at the present time, has no known interpretation, except
 that it is close to the mass of the human ovocyte. In this way, the local inertia is related to the distant
 masses, in accordance with the Mach principle, which the relativity theory does not explain.
 Another shortcoming of this theory is that it does not define any inertial frame. However, the
@@ -337,7 +318,7 @@ oscillatory bounce has a frequency about $10^{104}Hz $ [5].
 \subsection{Tachyonic Flickering Space-Time-Matter}
 
 The tachyonic hypothesis is consistent with the non-local character of quantum mechanics. The
-matter-antimatter flickering respects the CPT (Charge-Parity-Time) symmetry.
+matter-antimatter flickering respects the CPT (Charge conjugation-Parity inversion-Time reversal) symmetry.
 
 \subsubsection{Single Electron Cosmology}
 
@@ -956,6 +937,8 @@ term $1+1/\sqrt{a}$, central in quantum electrodynamics to 0.1 ppm:
 1+1/\sqrt{a} \approx \tau^{3} H/pD^{2}
 \end{equation}
 This Koide relation, quite discarded by the scientific community, is another sign of the serious incompleteness of present Particle Physics standard model
+
+
 
 \subsection {The Intermediate Bosons mathematical fine tuning}
 
