--- a/main.tex
+++ b/main.tex
@@ -97,7 +97,7 @@ The first section explains, by the Holographic Principle, \textit{why large numb
 \section {Internal Fine Tuning and Canonical Large Numbers}
 We look here for a systematic organization of dimensionless physical quantities stemming from cosmology, particle physics and mathematics.
 \subsection {The Cosmic Fine-Tuning and the Topological Axis}
-\markright{F. Sanchez, \ V. Kotov, \ M. Grosmann, \ D. Weigel, \ R. Veysseyre, \ C. Bizouard, \ N. Flawisky, \ D. Gayral, \ L. Gueroult, Back to Cosmos}
+\markright{F. M. Sanchez, \ V. A. Kotov, \ M. Grosmann, \ D. Weigel, \ R. Veysseyre, \ C. Bizouard, \ N. Flawisky, \ D. Gayral, \ L. Gueroult, Back to Cosmos}
 
 The most famous fine tuning implies cosmic quantities, awkwardly called the `Double
 Large Number Problem`. If it is a `problem` for standard evolutionary cosmology, it is a precious
@@ -447,7 +447,7 @@ timescales would coincide by chance is near $3 \cdot 10^{-4}$).
 
 \begin{figure}
 \centering
-\includegraphics[width=8cm,height=6.5cm]{./figures/figure1}
+\includegraphics[width=7cm,height=5.5cm]{./figures/figure1}
 \caption{Resonance-spectrum $F(\nu)$ computed for 15 motions of the largest, fast-spinning bodies of
 the solar system. On horizontal axis is logarithm of frequency $\nu$ in $\mu$Hz, the dashed horizontal line
 shows a $ 3 \theta $ C.L., and the primary peak yields to the best - commensurable period 9594(65) s.}
@@ -456,7 +456,7 @@ shows a $ 3 \theta $ C.L., and the primary peak yields to the best - commensurab
 
 \begin{figure}
 \centering
-\includegraphics[width=8cm,height=6.5cm]{./figures/figure2}
+\includegraphics[width=7cm,height=5.5cm]{./figures/figure2}
 \caption{Same as Fig. 2, for N = 11 sizes `diameters` of the solar system (with c = 1 and the $\pi$
 factor for inner orbits). The highest peak corresponds to the spatial scale 9600(120) light sec.}
 \label{fig:figure_label}
@@ -464,7 +464,7 @@ factor for inner orbits). The highest peak corresponds to the spatial scale 9600
 
 \begin{figure}
 \centering
-\includegraphics[width=8cm,height=6.5cm]{./figures/figure3}
+\includegraphics[width=7cm,height=5.5cm]{./figures/figure3}
 \caption{Resonance-spectrum $F_{1} ( \nu)$, computed for N = 5746 binaries with periods < 5 days.
 Horizontal axis gives logarithm of the trial frequency $\nu$ in $\mu Hz$, the dashed line indicates a $3 \theta$
 C.L., and the major peak corresponds to a timescale of 9590(70) s.}
@@ -473,7 +473,7 @@ C.L., and the major peak corresponds to a timescale of 9590(70) s.}
 
 \begin{figure}
 \centering
-\includegraphics[width=8cm,height=6.5cm]{./figures/figure4}
+\includegraphics[width=7cm,height=5.5cm]{./figures/figure4}
 \caption{Same as Fig. 4, for the $F_{2} ( \nu )$ spectrum, computed for N = 145 exoplanets with P < 1.5
 days. The strongest peak of the composite commensurability corresponds to a period of 9640(115) s
 at nearly $3.9\theta$ significance (after Kotov, 2018).}
