--- a/main.tex
+++ b/main.tex
@@ -53,7 +53,7 @@ $^7$Architect / Math Instructor at Ecole Nationale Superieure d'Architecture Par
 $^8$Computer Science Engineer at OBSPM, Paris, France.
 $^9$Retired Maitre de Conference at Ecole Nationale Superieure d'Architecture Paris Malaquais, France.
 
-\par
+}\par
 \medskip
 {\small\parbox{11cm}{%
 \hfill To the memory of Sir Michael Atiyah\\
