--- a/main.tex
+++ b/main.tex
@@ -114,14 +114,14 @@ The most famous fine tuning implies cosmic quantities, awkwardly called the `Dou
 Large Number Problem`. If it is a `problem` for standard evolutionary cosmology, it is a precious
 clue in steady-state cosmology based on the above \textit{Perfect} Cosmological Principle (spatial \textit{and} temporal homogeneity) [3].
 This Cosmic Fine-Tuning leads directly to a Gravitational Hydrogen model of the universe [3]
-defining the Universe horizon radius: $$R = 2a_{G} \lambdabar_{e}$$ the factor 2 coming from the two atoms in
+defining the Universe horizon radius: $R = 2a_{G} \lambdabar_{e}$ the factor 2 coming from the two atoms in
 Hydrogen molecule, where 
 $\lambdabar_{e} = \hbar/cm_{e}$
 is the Electron Compton reduced wavelength, and the
 gravitational coupling constant is: 
-$$a_{G} = \hbar c/Gm_{p}m_{H}$$
+$a_{G} = \hbar c/Gm_{p}m_{H}$
 So, \textit{the speed c is eliminated}, in accordance with
-Coherent Cosmology which needs signal celerity far exceeding $c$. This gives $$R \approx 13,812 Gly $$ corresponding to a Hubble constant 70.790 (km/s)/Megaparsec, compatible with the
+Coherent Cosmology which needs signal celerity far exceeding $c$. This gives $R \approx 13,812 Gly $ corresponding to a Hubble constant 70.790 (km/s)/Megaparsec, compatible with the
 most recent measurement [4]: 72(3) (km/s)/Megaparsec, which confirms the value measured
 directly by the 1a type novae, while the standard optimization of 6 parameters results in a lower, by $9\%$,
 value.
@@ -1171,9 +1171,9 @@ It is now clear that present mathematics and Particle Physics are incomplete, an
 
       This article leads to some predictions:
 \item 1/  The very large infra-red telescopes in preparation will show in the very far field old galaxies instead of expected young ones. Then no artifice, such as inflation, dark energy, multiverse ..., will not save the already refuted standard evolutionary model.
-\item 2/ The Particle Physics will integrate the Koide relation and introduce massive gluons.
+\item 2/ The Particle Physics will integrate the Koide relation and introduce massive gluons and composite quark d.
 \item 3/ Informatics software will be boosted by the principle of multibase computation.
-\item 4/ The multiple connexions with the DNA chain seems to imply it is a 1D hologram. This seems to be confirmed by recent studies [30]. 
+\item 4/ The multiple connexions with the DNA chain seems to imply it is a 1D hologram. Recent studies [30] are on this way. 
 \end{itemize}
 
 
